--- a/wp-content/themes/lukaszarpak/resources/styles/content/_cards.scss
+++ b/wp-content/themes/lukaszarpak/resources/styles/content/_cards.scss
@@ -2,7 +2,6 @@
 	margin: auto 0 1rem;
 	display: flex;
 	flex-wrap: wrap;
-	gap: 5px;
 
 	span {
 		font-family: $font-body-bold;
@@ -12,6 +11,7 @@
 		border: 3px solid #28242f;
 		border-radius: 2rem;
 		padding: 0.2rem 0.85rem 0.25rem;
+		margin: 0 5px 5px 0;
 	}
 }
 
