--- a/wp-content/themes/lukaszarpak/resources/styles/content/_single-post.scss
+++ b/wp-content/themes/lukaszarpak/resources/styles/content/_single-post.scss
@@ -291,7 +291,13 @@ body.single-post {
 			height: fit-content;
 
 			h1 {
-				margin-bottom: 3rem;
+				@include media(mobile) {
+					margin-bottom: 2rem;
+				}
+			}
+
+			.card-tags {
+				margin: 1rem 0;
 			}
 
 			p {
@@ -300,17 +306,15 @@ body.single-post {
 
 			.icons {
 				margin-bottom: 2rem;
-				display: flex;
-				align-items: center;
-				gap: 2rem;
 
 				ul {
+					display: grid;
+					gap: 1rem;
+					grid-template-columns: repeat(2, 1fr);
 					list-style: none;
 					padding: 0;
-					display: flex;
-					margin: 1rem 0 0 0;
+					margin: 1rem auto 0 0;
 					width: fit-content;
-					gap: 1rem;
 					justify-content: center;
 
 					li {
@@ -320,6 +324,28 @@ body.single-post {
 						}
 					}
 				}
+
+				// margin-bottom: 2rem;
+				// display: flex;
+				// align-items: center;
+				// gap: 2rem;
+
+				// ul {
+				// 	list-style: none;
+				// 	padding: 0;
+				// 	display: flex;
+				// 	margin: 1rem 0 0 0;
+				// 	width: fit-content;
+				// 	gap: 1rem;
+				// 	justify-content: center;
+
+				// 	li {
+				// 		a i {
+				// 			font-size: $font-xl;
+				// 			@extend .gradient;
+				// 		}
+				// 	}
+				// }
 			}
 
 			.wp-block-image {
